# retcon

./: .clippy.toml  .commitlintrc.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  cliff.toml  deny.toml  package.json  rust-toolchain.toml  rustfmt.toml  setup-dev.sh
.cargo/: config.toml
.claude/: settings.local.json
.claude/skills/retcon/: SKILL.md
.config/: tarpaulin.toml
.github/: dependabot.yml
.github/workflows/: README.md  audit.yml  auto-release.yml  ci-example.yml  ci.yml  pre-commit.yml  release.yml
src/: app.rs  error.rs  lib.rs  main.rs
src/git/: commit.rs  mod.rs  repository.rs  rewrite.rs  validation.rs
src/state/: app_state.rs  mod.rs
src/ui/: layout.rs  theme.rs
src/ui/widgets/: commit_table.rs  confirmation.rs  detail_pane.rs  edit_popup.rs  editor.rs  help.rs  mod.rs  search_bar.rs  status_bar.rs  title_bar.rs
tests/: README.md  integration_test.rs
