[package]
name = "retcon"
version = "0.1.0"
edition = "2021"
description = "Retroactive Continuity CLI - A modern TUI for editing git history"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]
keywords = ["git", "tui", "history", "rebase", "retcon"]
categories = ["command-line-utilities", "development-tools"]
default-run = "retcon"

# Note: `ret` binary is auto-discovered from src/bin/ret.rs

[dependencies]
# TUI Framework
ratatui = "0.30"
crossterm = "0.28"

# Git operations
git2 = "0.19"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Text editing widget
tui-textarea = { version = "0.7", default-features = false, features = ["crossterm"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization (for undo/redo state)
serde = { version = "1.0", features = ["derive"] }

# Email validation
email_address = "0.2"

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# Unicode width for proper text alignment
unicode-width = "0.2"

# Temp file for external editor
tempfile = "3.0"

[dev-dependencies]
# Testing utilities
tempfile = "3.0"  # Already in dependencies, but good for test repos
pretty_assertions = "1.4"  # Better assertion output
serial_test = "3.0"  # Serialize tests that access git repos
serde_json = "1.0"  # For testing serde implementations

[profile.release]
lto = true
strip = true

# Clippy linting configuration
# Run with: cargo clippy -- -D warnings
[lints.clippy]
# Deny these groups in CI/CD
all = "deny"
pedantic = "warn"
nursery = "warn"
cargo = "warn"

# Allow some pedantic lints that are too strict for TUI apps
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# TUI code often needs these patterns
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"

# Allow common patterns in this codebase
struct_excessive_bools = "allow"
similar_names = "allow"

# Security and correctness - always deny these
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"

# Performance
missing_const_for_fn = "warn"
trivially_copy_pass_by_ref = "warn"

# Style preferences
use_self = "warn"
inconsistent_struct_constructor = "warn"
manual_let_else = "warn"

[lints.rust]
# Deny unsafe code unless explicitly marked
unsafe_code = "warn"
# Allow missing docs - this is a CLI tool, not a library
# Documentation will be added when the API stabilizes
missing_docs = "allow"
# Deny unused imports and variables
unused_imports = "deny"
unused_variables = "deny"
dead_code = "warn"
# Edition compatibility
rust_2018_idioms = "warn"
